data/derived/sp14/progs/unify/prog1074.ml.out
Characters 25-28:
  let _ = eval(Sine(VarX), 0.5, -0.5);;
                           ^^^
Error: This expression has type float but an expression was expected of type
         int
